<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Payment Tracker</string>
    <string name="settings_button_text">Settings</string>
    <string name="status_placeholder">Waiting for permissions...</string>
    <string name="notification_channel_name">SMS Forwarder Channel</string>
    <string name="notification_channel_description">Notifies the user that the service is running in the background.</string>

    <string name="dialog_unified_settings_title">Forwarding Settings</string>

    <string name="dialog_webhook_title">Webhook Settings</string>
    <string name="dialog_webhook_url_hint">Enter Webhook URL</string>
    <string name="dialog_secret_key_hint">Enter Secret Key (Optional)</string>
    <string name="dialog_save_button">Save</string>
    <string name="dialog_test_button">Test Webhook</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="webhook_url_hint">Enter Webhook URL</string>
    <string name="secret_key_hint">Enter Secret Key (Optional)</string>
    <string name="save_button_text">Save</string>
    <string name="test_webhook_button">Test</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="dialog_battery_optimization_title">Disable Battery Optimization</string>
    <string name="dialog_battery_optimization_message">The app needs to run in the background to forward messages. Please disable battery optimization for this app to prevent the system from killing the service.</string>
    <string name="dialog_battery_optimization_settings_button">Go to Settings</string>
    <string name="dialog_battery_optimization_cancel_button">Cancel</string>

    <string name="telegram_settings_title">Telegram Settings</string>
    <string name="telegram_bot_token_hint">Enter Telegram Bot Token</string>
    <string name="telegram_chat_id_hint">Enter Chat ID With Prefix -100</string>
    <string name="save">Save</string>
    <string name="test_button_text">Test</string>

    <string name="empty_state_message">New messages will appear here.</string>
    <string name="forwarding_error_title"> Recent Forwarding Error</string>
    <string name="ok_button_text">OK</string>

    <string name="detailed_status_title">Detailed App Status</string>

    <string name="telegram_permissions_warning">Make sure the bot is an admin and has send permissions in given channel.</string>
</resources>